--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,8 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest
-          pytest tests/test_tasks_processes.py
+          pytest --doctest-modules --junitxml=junit/test-results.xml tests/python_unittest.py
+          tests/test_tasks_processes.py
 
   # build-and-push-image:
   #   runs-on: ubuntu-latest
