--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -33,10 +33,11 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
+        working-directory: /
         run: |
           pip install pytest
-          pytest --doctest-modules --junitxml=junit/test-results.xml ./tests/test_tasks_processes.py
-          ./tests/test_tasks_processes.py
+          pytest --doctest-modules --junitxml=junit/test-results.xml tests/test_tasks_processes.py
+          tests/test_tasks_processes.py
 
   # build-and-push-image:
   #   runs-on: ubuntu-latest
