--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Test with pytest
         # working-directory: tests
         run: |
-          pytest tests/test_tasks_processes.py
+          python -m pytest tests/test_tasks_processes.py
 
   # build-and-push-image:
   #   runs-on: ubuntu-latest
